# robot-manage-ros

./: .gitignore  README.md
robot-manage-ros/: CMakeLists.txt  package.xml
robot_keyboard_controller/: CMakeLists.txt  package.xml
robot_keyboard_controller/launch/: RobotKeyboardController.launch
robot_keyboard_controller/scripts/: RobotKeyboardController.py
robot_move_state_manager/: CMakeLists.txt  package.xml
robot_move_state_manager/launch/: RobotMoveStateManager.launch
robot_move_state_manager/scripts/: RobotMoveStateManager.py
robot_path_planner/: CMakeLists.txt  package.xml
robot_path_planner/include/distance_utils/: astar_expander.h  cost_grid_expander.h  dijkstra_expander.h  distance_metric.h  euclidean_distance.h  geodesic_distance.h
robot_path_planner/include/grid_map/: grid_map_2d.h
robot_path_planner/include/robot_path_planner/: RobotPathPlanner.h  RobotPathPlannerServer.h  path_generator.h
robot_path_planner/launch/: RobotPathPlannerServer.launch  RobotPathVisualizer.launch
robot_path_planner/msg/: PoseVec.msg
robot_path_planner/scripts/: RobotPathVisualizer.py
robot_path_planner/src/: RobotPathPlanner.cpp  RobotPathPlannerServer.cpp  RobotPathPlannerServer_node.cpp  path_generator.cpp  try_RobotPathPlannerServer.cpp
robot_path_planner/src/distance_utils/: astar_expander.cpp  dijkstra_expander.cpp  distance_metric.cpp  euclidean_distance.cpp  geodesic_distance.cpp
robot_path_planner/src/grid_map/: grid_map_2d.cpp
robot_path_planner/srv/: PointVecToPoseVec.srv  TargetPoseVecToNavPoseVec.srv
robot_position_loader/: CMakeLists.txt  package.xml
robot_position_loader/include/robot_position_loader/: RobotPositionLoader.h  RobotPositionLoaderServer.h
robot_position_loader/launch/: RobotPositionLoaderServer.launch
robot_position_loader/msg/: BBox3DVec.msg
robot_position_loader/src/: RobotPositionLoader.cpp  RobotPositionLoaderServer.cpp  RobotPositionLoaderServer_node.cpp  try_RobotPositionLoaderServer.cpp
robot_position_loader/srv/: GetRobotBBox3DVec.srv
robot_position_visualizer/: CMakeLists.txt  package.xml
robot_position_visualizer/launch/: RobotPositionVisualizer.launch
robot_position_visualizer/scripts/: RobotPositionVisualizer.py
